--- a/src/assets/language/arabian.json
+++ b/src/assets/language/arabian.json
@@ -33,5 +33,12 @@
   "three":"توفير المال",
   "four":"توفير الوقت",
   "five":"تسليم الفرد سريع",
-  "next":"التالى"
+  "next":"التالى",
+  "email":"البريد الإلكتروني",
+  "name":"اسم",
+  "password":"كلمه السر",
+  "registration":"التسجيل",
+  "Registration":"التسجيل",
+  "SingIn":"تسجيل الدخول",
+  "Forgot_password":"هل نسيت كلمة المرور"
 }
