--- a/src/assets/language/ru.json
+++ b/src/assets/language/ru.json
@@ -33,5 +33,12 @@
   "three":"Экономьте деньги",
   "four":"Экономьте время",
   "five":"Быстрая индивидуальная доставка",
-  "next":"Далее"
+  "next":"Далее",
+  "email":"email",
+  "name":"имя",
+  "password":"пароль",
+  "registration":"регистрация",
+  "Registration":"Регитрация",
+  "SingIn":"Вход",
+  "Forgot_password":"Восстановление пароля"
 }
