--- a/src/assets/language/arabian.json
+++ b/src/assets/language/arabian.json
@@ -40,5 +40,6 @@
   "registration":"التسجيل",
   "Registration":"التسجيل",
   "SingIn":"تسجيل الدخول",
-  "Forgot_password":"هل نسيت كلمة المرور"
+  "Forgot_password":"هل نسيت كلمة المرور",
+  "myrequest":"طلباتي"
 }
