--- a/src/assets/language/es.json
+++ b/src/assets/language/es.json
@@ -40,5 +40,6 @@
   "registration":"registro",
   "Registration":"Registro",
   "SingIn":"Registrarse",
-  "Forgot_password":"Se te olvidó tu contraseña"
+  "Forgot_password":"Se te olvidó tu contraseña",
+  "myrequest":"mis solicitudes"
 }
