--- a/src/assets/language/chinese.json
+++ b/src/assets/language/chinese.json
@@ -40,5 +40,6 @@
   "registration":"註冊",
   "Registration":"註冊",
   "SingIn":"登入",
-  "Forgot_password":"忘記密碼"
+  "Forgot_password":"忘記密碼",
+  "myrequest":"我的要求"
 }
