--- a/src/assets/language/en.json
+++ b/src/assets/language/en.json
@@ -40,5 +40,6 @@
   "registration":"registration",
   "Registration":"Registration",
   "SingIn":"Sign In",
-  "Forgot_password":"Forgot password"
+  "Forgot_password":"Forgot password",
+  "myrequest":"My request"
 }
