--- a/src/assets/language/arabian.json
+++ b/src/assets/language/arabian.json
@@ -41,5 +41,6 @@
   "Registration":"التسجيل",
   "SingIn":"تسجيل الدخول",
   "Forgot_password":"هل نسيت كلمة المرور",
-  "myrequest":"طلباتي"
+  "myrequest":"طلباتي",
+  "status":"الحالة"
 }
