--- a/src/assets/language/chinese.json
+++ b/src/assets/language/chinese.json
@@ -41,5 +41,6 @@
   "Registration":"註冊",
   "SingIn":"登入",
   "Forgot_password":"忘記密碼",
-  "myrequest":"我的要求"
+  "myrequest":"我的要求",
+  "status":"狀態"
 }
