--- a/src/assets/language/en.json
+++ b/src/assets/language/en.json
@@ -41,5 +41,6 @@
   "Registration":"Registration",
   "SingIn":"Sign In",
   "Forgot_password":"Forgot password",
-  "myrequest":"My request"
+  "myrequest":"My request",
+  "status":"status"
 }
