--- a/src/assets/language/ru.json
+++ b/src/assets/language/ru.json
@@ -41,5 +41,6 @@
   "Registration":"Регитрация",
   "SingIn":"Вход",
   "Forgot_password":"Восстановление пароля",
-  "myrequest":"Мои заявки"
+  "myrequest":"Мои заявки",
+  "status":"статус"
 }
